# avogadro-aimnet2

./: .gitignore  README.md  pyproject.toml
src/avogadro_aimnet/: __init__.py
src/avogadro_aimnet2/: __init__.py  aimnet2.py  charges.py
