[project]
authors = [{name = "Geoff Hutchison", email = "geoff.hutchison@gmail.com"}]
dependencies = [
  "aimnet>=0.1.0", "setuptools>=82.0.0,<83",
]
license = "BSD-3-Clause"
name = "avogadro-aimnet"
requires-python = ">=3.11,<3.14"
version = "0.1.0"
description = "Calculate energies and charges using the AIMNet2 models"

[project.scripts]
avogadro-aimnet = "avogadro_aimnet:main"
avogadro-aimnet-setup = "avogadro_aimnet:setup"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/avogadro_aimnet"]

[tool.avogadro]
minimum-avogadro-version = "1.103"

[[tool.avogadro.energy-models]]
identifier = "AIMNet2"
model-name = "AIMNet2"
description = "Calculate AIMNet 2 energies and gradients"
input-format = "cjson"
protocol = "binary"
support.gradients = true
support.elements = "1, 5-9, 14-17, 33-35, 53"
support.unit-cell = false
support.ions = true
support.radicals = false

[[tool.avogadro.energy-models]]
identifier = "AIMNet2-NSE"
model-name = "AIMNet2-NSE"
description = "Calculate AIMNet2-NSE energies and gradients"
input-format = "cjson"
protocol = "binary"
support.gradients = true
support.elements = "1, 5-9, 14-17, 33-35, 53"
support.unit-cell = false
support.ions = true
support.radicals = true

[[tool.avogadro.electrostatic-models]]
identifier = "nse_charges"
model-name = "AIMNet2-NSE"
input-format = "xyz"
input-cjson = true
support.elements = "1, 5-9, 14-17, 33-35, 53"
support.charges = true
support.potentials = false

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
avogadro_aimnet = { path = ".", editable = true }

[tool.pixi.tasks]
setup = { cmd = "avogadro-aimnet-setup", env = { CONDA_NO_PLUGINS = "true" } }

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
